Alignment fix and contact href

--- a/src/queries.css
+++ b/src/queries.css
@@ -104,11 +104,21 @@
   .container {
     max-width: 90rem;
   }
-  .projects-container {
+  /* .projects-container {
     grid-template-columns: 1fr;
     gap: 4.8rem;
     padding: 0 4.8rem;
     margin-bottom: 9.6rem;
+  } */
+
+  .project {
+    display: flex;
+    flex-direction: column;
+  }
+  .project-2,
+  .project-4,
+  .project-6 {
+    flex-direction: column-reverse;
   }
   .project-img-box {
     padding: 2.4rem;
